<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:icon="@drawable/ic_home_black_24dp"
        android:id="@+id/item_home"
        android:title="@string/bome" />


    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/item_search"
        android:title="@string/search" />


    <item
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/item_add_post"
        android:title="@string/add" />


    <item
        android:icon="@drawable/ic_favorite_black_24dp"
        android:id="@+id/item_like"
        android:title="@string/like" />


    <item
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:id="@+id/item_profile"
        android:title="@string/profile" />

</menu>